<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>52</version>
        <relativePath />
    </parent>

    <groupId>org.jgroups.kubernetes</groupId>
    <artifactId>jgroups-kubernetes</artifactId>
    <version>3.0.0.Final-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>JGroups Kubernetes – kubernetes.KUBE_PING</name>
    <description>JGroups discovery protocol for Kubernetes</description>
    <url>https://github.com/jgroups-extras/jgroups-kubernetes</url>

    <organization>
        <name>JBoss, a division of Red Hat</name>
        <url>https://www.jboss.org</url>
    </organization>

    <developers>
        <developer>
            <name>Ales Justin</name>
            <email>ales.justin@jboss.org</email>
        </developer>
        <developer>
            <name>Sebastian Łaskawiec</name>
            <email>slaskawi@redhat.com</email>
        </developer>
        <developer>
            <name>Bela Ban</name>
            <email>belaban@gmail.com</email>
        </developer>
        <developer>
            <name>Radoslav Husar</name>
            <email>rhusar@ibm.com</email>
            <roles>
                <role>developer</role>
                <role>maintainer</role>
            </roles>
            <url>https://github.com/rhusar</url>
            <organization>IBM</organization>
            <organizationUrl>https://www.ibm.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>https://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/jgroups-extras/jgroups-kubernetes/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/jgroups-extras/jgroups-kubernetes/actions</url>
    </ciManagement>

    <scm>
        <connection>scm:git:git://github.com/jgroups-extras/jgroups-kubernetes.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/jgroups-extras/jgroups-kubernetes.git</developerConnection>
        <url>https://github.com/jgroups-extras/jgroups-kubernetes</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <!-- JBoss Parent overrides -->
        <maven.compiler.release>17</maven.compiler.release>
        <jdk.min.version>${maven.compiler.release}</jdk.min.version>
        <nexus.staging.tag>${project.groupId}-${project.version}</nexus.staging.tag>

        <!-- https://mvnrepository.com/artifact/org.jgroups/jgroups -->
        <version.jgroups>5.5.4.Final</version.jgroups>
        <version.jakarta.json>2.1.3</version.jakarta.json>
        <version.parsson>1.1.7</version.parsson>
        <version.junit>4.13.2</version.junit>
        <version.assertj>3.27.7</version.assertj>
    </properties>

    <dependencies>
        <!-- Runtime dependencies -->
        <dependency>
            <groupId>org.jgroups</groupId>
            <artifactId>jgroups</artifactId>
            <version>${version.jgroups}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>${version.jakarta.json}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <version>${version.parsson}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${version.assertj}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <arguments>-DskipTests</arguments>
                    <!-- Temporarily until Nexus stabilizes keep SCM pushes manual -->
                    <pushChanges>false</pushChanges>
                    <localCheckout>true</localCheckout>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
